various changes - added Masternode summary box etc

--- a/locale/en.json
+++ b/locale/en.json
@@ -45,6 +45,7 @@
     // global
     "difficulty": "Difficulty",
     "network": "Network",
+    "masternodecount": "Masternodes",
     "height": "Height",
     "timestamp": "Timestamp",
     "size": "Size",
@@ -106,6 +107,7 @@
     "api_getblockcount": "Returns the current block index.",
     "api_getblockhash": "Returns the hash of the block at ; index 0 is the genesis block.",
     "api_getblock": "Returns information about the block with the given hash.",
+    "api_getmasternodecount": "Returns the number of master nodes on the network.",
     "api_getrawtransaction": "Returns raw transaction representation for given transaction id. decrypt can be set to 0(false) or 1(true).",
     "api_getmaxmoney": "Returns the maximum possible money supply.",
     "api_getmaxvote": "Returns the maximum allowed vote for the current phase of voting.",
