Modified masternode list to support SKELR output

--- a/locale/en.json
+++ b/locale/en.json
@@ -87,12 +87,12 @@
     // masternodes
     "mn_masternode": "Masternode",
     "mn_masternodes": "Masternodes",
-    "mn_rank": "Rank",
+    "mn_pubkey": "Public Key",
     "mn_network": "Network",
     "mn_address": "Address",
     "mn_version": "Version",
     "mn_status": "Status",
-    "mn_activetime": "Active Time",
+    "mn_activesec": "Active Time",
     "mn_lastseen": "Last Seen",
     "mn_lastpaid": "Last Paid",
     "mn_notpaid": "Not Paid Yet",
